--- a/CSManagement/CSManagement/CSManagement.csproj
+++ b/CSManagement/CSManagement/CSManagement.csproj
@@ -494,6 +494,7 @@
     <Compile Include="Models\Dispose.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\FileUploadCheck.cs" />
     <Compile Include="Models\Generation.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
