--- a/CSManagement/CSManagement/CSManagement.csproj
+++ b/CSManagement/CSManagement/CSManagement.csproj
@@ -125,6 +125,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\index\body1.png" />
+    <Content Include="Content\index\bootstrap.min.css" />
+    <Content Include="Content\index\bootstrap.min.js" />
+    <Content Include="Content\index\bootstrap1.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.min.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap4.css" />
@@ -288,18 +292,35 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\index\jquery.js" />
+    <Content Include="Content\index\script.js" />
     <Content Include="Content\js\jquery.validate.js" />
     <Content Include="Content\js\plugins\jquery.validate\jquery.validate.js" />
     <Content Include="Content\js\plugins\jquery.validate\jquery.validate.min.js" />
     <Content Include="Content\js\plugins\jquery.validate\jquery.validate.unobtrusive.js" />
     <Content Include="Content\js\plugins\jquery.validate\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Content\index\timeline.css" />
     <Content Include="Global.asax" />
     <Content Include="img\cs1.png" />
+    <Content Include="img\email.png" />
+    <Content Include="img\h1.jpg" />
+    <Content Include="img\h2.jpg" />
+    <Content Include="img\h4.jpg" />
     <Content Include="img\icons8-cat-profile-64.png" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="img\fb.png" />
+    <Content Include="img\login.jpg" />
+    <Content Include="img\kru.png" />
+    <Content Include="img\logo.png" />
+    <Content Include="img\logo1.png" />
+    <Content Include="img\logo2.png" />
+    <Content Include="img\logo3.png" />
+    <Content Include="img\logo4.png" />
+    <Content Include="img\present1.png" />
+    <Content Include="img\tel.png" />
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
@@ -464,6 +485,8 @@
     <Content Include="Views\RegisterLinks\Edit.cshtml" />
     <Content Include="Views\RegisterLinks\Index.cshtml" />
     <Content Include="Views\Pictures\GoRegister.cshtml" />
+    <Content Include="Views\Home\IndexUser.cshtml" />
+    <Content Include="Views\Shared\_LayoutUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
