--- a/CSManagement/CSManagement/CSManagement.csproj
+++ b/CSManagement/CSManagement/CSManagement.csproj
@@ -300,6 +300,12 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="img\logo.png" />
+    <Content Include="img\logo1.png" />
+    <Content Include="img\logo2.png" />
+    <Content Include="img\logo3.png" />
+    <Content Include="img\logo4.png" />
+    <Content Include="imgSlideShow\present1.png" />
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
@@ -485,6 +491,9 @@
     <Content Include="Views\Applieds\Edit.cshtml" />
     <Content Include="Views\Applieds\Index.cshtml" />
     <Content Include="Views\Generations\Registers.cshtml" />
+    <Content Include="Views\Shared\_LayoutUser.cshtml" />
+    <Content Include="Views\Projects\IndexUser.cshtml" />
+    <Content Include="Views\Home\IndexUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -729,7 +738,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="FIleUploaded\" />
-    <Folder Include="imgSlideShow\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
