--- a/CSManagement/CSManagement/CSManagement.csproj
+++ b/CSManagement/CSManagement/CSManagement.csproj
@@ -294,6 +294,7 @@
     <Content Include="Content\js\plugins\jquery.validate\jquery.validate.unobtrusive.js" />
     <Content Include="Content\js\plugins\jquery.validate\jquery.validate.unobtrusive.min.js" />
     <Content Include="Global.asax" />
+    <Content Include="imgSlideShow\637098631891730360.jpg" />
     <Content Include="img\com.png" />
     <Content Include="img\cs1.png" />
     <Content Include="img\icons8-cat-profile-64.png" />
@@ -301,7 +302,8 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="img\logo.png" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="img\images.jpg" />
     <Content Include="img\logo1.png" />
     <Content Include="img\logo2.png" />
     <Content Include="img\logo3.png" />
@@ -310,6 +312,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-1.7-vsdoc.js" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -497,6 +500,10 @@
     <Content Include="Views\Home\IndexUser.cshtml" />
     <Content Include="Views\Generations\IndexUser.cshtml" />
     <Content Include="Views\Generations\DetailsUser.cshtml" />
+    <Content Include="Views\Teachers\IndexUser.cshtml" />
+    <Content Include="Views\Home\IndexUserGrap.cshtml" />
+    <Content Include="Views\Home\IndexUser1.cshtml" />
+    <Content Include="Views\Shared\_LayoutUser1.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -681,27 +688,6 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="Content\img\user.jpg" />
-    <Content Include="Content\img\icheck\aero.png" />
-    <Content Include="Content\img\icheck\aero@2x.png" />
-    <Content Include="Content\img\icheck\blue.png" />
-    <Content Include="Content\img\icheck\blue@2x.png" />
-    <Content Include="Content\img\icheck\green.png" />
-    <Content Include="Content\img\icheck\green@2x.png" />
-    <Content Include="Content\img\icheck\grey.png" />
-    <Content Include="Content\img\icheck\grey@2x.png" />
-    <Content Include="Content\img\icheck\minimal.png" />
-    <Content Include="Content\img\icheck\minimal@2x.png" />
-    <Content Include="Content\img\icheck\orange.png" />
-    <Content Include="Content\img\icheck\orange@2x.png" />
-    <Content Include="Content\img\icheck\pink.png" />
-    <Content Include="Content\img\icheck\pink@2x.png" />
-    <Content Include="Content\img\icheck\purple.png" />
-    <Content Include="Content\img\icheck\purple@2x.png" />
-    <Content Include="Content\img\icheck\red.png" />
-    <Content Include="Content\img\icheck\red@2x.png" />
-    <Content Include="Content\img\icheck\yellow.png" />
-    <Content Include="Content\img\icheck\yellow@2x.png" />
     <Content Include="Content\js\adminlte.js" />
     <Content Include="Content\js\init.js" />
     <Content Include="Content\js\plugins\bootstrap\bootstrap.js" />
