--- a/CSManagement/CSManagement/CSManagement.csproj
+++ b/CSManagement/CSManagement/CSManagement.csproj
@@ -512,6 +512,8 @@
     <Content Include="Views\News\Edit.cshtml" />
     <Content Include="Views\News\Index.cshtml" />
     <Content Include="Views\Generations\showdetails.cshtml" />
+    <Content Include="Views\Students\Indexforreport.cshtml" />
+    <Content Include="Views\Students\Indexforschool.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -632,6 +634,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Totaljob.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TotalSchool.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Validate_Models.cs" />
