--- a/CSManagement/CSManagement/Web.config
+++ b/CSManagement/CSManagement/Web.config
@@ -14,7 +14,6 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <add key="SenderEmail" value="kruautoemail@gmail.com" />
     <add key="SenderPassword" value="ef44ecc3" />
   </appSettings>
@@ -27,8 +26,9 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" maxRequestLength="1048576" />
+    <customErrors mode="Off" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
