--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,5 @@ ASALocalRun/
 .mfractor/
 /CSManagement/CSManagement/img
 /CSManagement/CSManagement/FIleUploaded
+/CSManagement/CSManagement/imgSlideShow
+/CSManagement/CSManagement/Content/pdf.js/images
